--- a/css/media.css
+++ b/css/media.css
@@ -21,6 +21,25 @@
     align-items: center;
 }
 
+.portfolio-menu-card {
+    flex-wrap: wrap;
+    gap: 16px 24px;
+    margin-right: 24px;
+    margin-bottom: 48px;
+}
+
+.portfolio-page-btn {
+    padding: 8px 16px;
+}
+
+.portfolio-item-content {
+    width: 100%;
+}
+
+.portfolio-item-content:not(:last-child) {
+    margin-bottom: 48px;
+}
+
 }
 
 /* ---------------------------MEDIA (MIN-WIDTH:768px)------------------- */
@@ -188,6 +207,27 @@
     text-align: left;
 }
 
+.portfolio {
+    padding-top: 64px;
+    padding-bottom: 96px;
+}
+
+.portfolio-menu-card {
+    gap: 24px;
+    margin-bottom: 64px;
+    justify-content: center;
+}
+
+.portfolio-pg-content {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 72px 24px;
+}
+
+.portfolio-item-content {
+    width: calc((100% - 24px) / 2);
+}
+
 }
 
 @media  screen and (min-width: 768px) and (max-width: 1199px) {
@@ -344,16 +384,36 @@
     width: 264px;
 }
 
+.portfolio {
+    padding-top: 100px;
+    padding-bottom: 120px;
+}
 
+.portfolio-menu-card {
+    margin-bottom: 72px;
+}
 
+.portfolio-pg-content {
+    gap: 48px 24px;
+}
 
+.portfolio-item-content {
+    width: calc((100% - 48px) / 3);
+    /* margin-right: 24px;
+    margin-bottom: 48px; */
+}
 
+/* .portfolio-item:not(:last-child) {
+    margin-right: 24px;
+}
+ */
 
+/* .portfolio-item-content:nth-child(3n) {
+    margin-right: 0;
+}
 
-
-
-
-
-
+.portfolio-item-content:nth-last-child(-n + 3) {
+    margin-bottom: 0;
+} */
 
 }
