--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,8 @@ ul, ol {
 
 img {
     display: block;
+    width: 100%;
+    height: auto;
 }
 
 button {
@@ -138,6 +140,7 @@ body {
 .mob-menu {
     position: fixed;
     top: 0;
+    left: 0;
     z-index: 100;
     padding: 80px 35px 40px 40px;
     width: 100%;
@@ -147,6 +150,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     opacity: 1;
+    box-shadow: 0 0 0 100vmax rgba(0, 0, 0, 0.5);
     overflow: auto;
 }
 
@@ -583,8 +587,12 @@ body {
 /* ============================== /FOOTER =============================== */
 /* ============================== PORTFOLIO PAGE ======================= */
 .portfolio {
-    padding-top: 96px;
-    padding-bottom: 120px;
+    padding-top: 48px;
+    padding-bottom: 48px;
+}
+
+.portfolio-menu-card {
+    display: flex;
 }
 
 .portfolio-page-btn {
@@ -625,35 +633,6 @@ body {
 .portfolio-pg-text {
     line-height: 1.5;
     color: var(--color-text-main);
-}
-
-.portfolio-menu-card {
-    display: flex;
-    margin-bottom: 72px;
-    justify-content: center;
-}
-
-.portfolio-item:not(:last-child) {
-    margin-right: 24px;
-}
-
-.portfolio-pg-content {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.portfolio-item-content {
-    width: calc((100% - 48px) / 3);
-    margin-right: 24px;
-    margin-bottom: 48px;
-}
-
-.portfolio-item-content:nth-child(3n) {
-    margin-right: 0;
-}
-
-.portfolio-item-content:nth-last-child(-n + 3) {
-    margin-bottom: 0;
 }
 
 .portfolio-item-link {
@@ -701,10 +680,6 @@ body {
     transform: translate(0, 0);
 }
 
-img {
-    width: 100%;
-    height: auto;
-} 
 /* ============================== /PORTFOLIO PAGE ======================= */
 /* ===============================MODAL WINDOW =========================== */
 .backdrop {
