--- a/css/styles.css
+++ b/css/styles.css
@@ -152,7 +152,7 @@ body {
     opacity: 1;
     box-shadow: 0 0 0 100vmax rgba(0, 0, 0, 0.5);
     overflow: auto;
-}
+    transition: opacity var(--transition-dur-time), visibility var(--transition-dur-time);}
 
 .mob-menu.is-hidden {
     opacity: 0;
@@ -168,7 +168,7 @@ body {
     color: var(--background-dark);
 }
 
-.mob-menu-link-sp {
+.mob-menu-link.current {
     color: var(--accent-color);
 }
 
@@ -199,7 +199,7 @@ body {
 
 .mob-menu-social-list {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     gap: 56px;
 }
 
@@ -231,7 +231,7 @@ body {
     align-items: center;
     width: 24px;
     height: 24px;
-    background-color: transparent;
+    background-color: var(--accent-lines);
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
 }
@@ -419,7 +419,7 @@ body {
 .customers-list {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-between;
     gap: 72px 16px;
 }
 
@@ -480,6 +480,7 @@ body {
 }
 
 .footer-text {
+    line-height: 1.5;
     margin-top: 16px;
     color: var(--accent-lines);
 }
@@ -664,7 +665,7 @@ body {
     top: 0;
     width: 100%;
     height: 100%;
-    transform: translate(0, 100%);
+    transform: translate(0, 101%);
     transition: transform var(--transition-dur-time);
 
     line-height: 1.5;
