--- a/css/media.css
+++ b/css/media.css
@@ -50,11 +50,6 @@
     margin-right: 120px;
 }
 
-.header {
-    padding-top: 16px;
-    padding-bottom: 16px;
-}
-
 .mob-menu {
     display: none;
 }
@@ -83,7 +78,6 @@
     width: 100%;
     height: 4px;
     left: 0px;
-    top: 49px;
     background: var(--accent-color);
     border-radius: 2px;
 }
@@ -237,17 +231,27 @@
     margin-bottom: 12px;
 }
 
+.header {
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
+.header-link {
+    padding-top: 24px;
+    padding-bottom: 24px;
+}
+
+.header-link.current::after {
+    bottom: -1px;
+}
+
+
 }
 /* ---------------------------MEDIA (MIN-WIDTH:1158px)------------------- */
 @media screen and (min-width: 1200px) {
     .container {
         max-width: 1158px;
     }
-
-.header {
-    padding-top: 24px;
-    padding-bottom: 24px;
-}
 
 .header-link.current::after {
     top: 45px;
